--- a/index.html
+++ b/index.html
@@ -3,18 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>legacy-estate-nexus</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Regal Estate Consultants</title>
+    <meta
+      name="description"
+      content="Mumbai's trusted partner in premium real estate. Connecting dreams with reality through exceptional properties and unparalleled service."
+    />
+    <meta name="author" content="Priyanshu Uchat" />
 
-    <meta property="og:title" content="legacy-estate-nexus" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Regal Estate Consultants" />
+    <meta
+      property="og:description"
+      content="Website Developed By Priyanshu Uchat"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://dev.priyanshuuchat/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@priyanshu_uchat" />
+    <meta
+      name="twitter:image"
+      content="https://dev.priyanshuuchat/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
