--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Regal Estate Consultants" />
     <meta
       property="og:description"
-      content="Website Developed By Priyanshu Uchat"
+      content="Mumbai's trusted partner in premium real estate."
     />
     <meta property="og:type" content="website" />
     <meta
