--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Regal Estate Consultants</title>
+    <title>Regal Estate Consultants : Your Trusted Property Advisor</title>
     <meta
       name="description"
       content="Mumbai's trusted partner in premium real estate. Connecting dreams with reality through exceptional properties and unparalleled service."
     />
     <meta name="author" content="Priyanshu Uchat" />
 
-    <meta property="og:title" content="Regal Estate Consultants" />
+    <meta property="og:title" content="Regal Estate Consultants : Your Trusted Property Advisor" />
     <meta
       property="og:description"
       content="Mumbai's trusted partner in premium real estate."
